--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "buildw": "cp src/index.html lib/ && babel src --out-dir lib -w --sourceRoot src"
   },
   "dependencies": {
-    "apollo-client": "^0.7.3",
+    "apollo-client": "^0.5.0",
     "babel-polyfill": "6.7.4",
     "chart.js": "^1.1.1",
     "classnames": "2.2.4",
     "express": "^4.13.4",
-    "graphiql": "^0.7.8",
+    "graphiql": "^0.8.1",
     "graphql": "^0.7.0",
-    "graphql-tag": "^0.1.11",
     "isomorphic-fetch": "^2.2.1",
     "sync-request": "^2.0.1",
     "vue": "^2.1.5",
-    "vue-apollo": "^1.1.0-beta.2",
+    "vue-apollo": "^1.3.0",
     "vue-awesome": "^2.0.3",
     "vue-loader": "^9.8.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "vue-material": "^0.4.1",
     "vue-router": "^2.1.1"
   },
@@ -35,7 +36,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.26.1",
-    "webpack": "^2.1.0-beta.28",
+    "webpack": ">1.3",
     "webpack-dev-server": "^1.16.1"
   }
 }
