--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "vue2-apollo-scaphold",
-  "private": true,
   "description": "Vue2 and Apollo w Scaphold.io",
   "repository": "kristianmandrup/vue2-apollo-scaphold",
   "version": "0.1.0",
+  "license": "MIT",
   "scripts": {
     "start": "babel-node ./src/server.js",
     "start-prod": "node ./lib/server.js",
@@ -20,13 +20,13 @@
     "graphql": "^0.7.0",
     "isomorphic-fetch": "^2.2.1",
     "sync-request": "^2.0.1",
-    "vue": "^2.1.5",
+    "vue": "^2.1.10",
     "vue-apollo": "^1.3.0",
     "vue-awesome": "^2.0.3",
     "vue-loader": "^9.8.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "vue-material": "^0.4.1",
+    "vue-material": "^0.6.3",
     "vue-router": "^2.1.1"
   },
   "devDependencies": {
