--- a/package.json
+++ b/package.json
@@ -31,12 +31,19 @@
   },
   "devDependencies": {
     "babel-cli": "^6.7.7",
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
+    "style-loader": "^0.13.1",
     "css-loader": "^0.26.1",
-    "webpack": ">1.3",
-    "webpack-dev-server": "^1.16.1"
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-latest": "^6.16.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.5",
+    "file-loader": "^0.9.0",
+    "inline-environment-variables-webpack-plugin": "^1.1.0",
+    "vue-loader": "^10.0.2",
+    "vue-template-compiler": "^2.1.8",
+    "webpack": "^2.2.0-rc.4"
   }
 }
