--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "graphiql": "^0.8.1",
     "graphql": "^0.7.0",
     "isomorphic-fetch": "^2.2.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "subscriptions-transport-ws": "^0.4.0",
     "sync-request": "^2.0.1",
     "vue": "^2.1.10",
     "vue-apollo": "^1.3.0",
     "vue-awesome": "^2.0.3",
     "vue-loader": "^9.8.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
     "vue-material": "^0.6.3",
     "vue-router": "^2.1.1"
   },
